POWR-1262a add some basic config to show pages with menu

--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -15,30 +15,152 @@ dependencies:
     - field.field.node.page.field_search_keywords
     - field.field.node.page.field_summary
     - field.field.node.page.field_topics
+    - field.field.node.page.layout_selection
     - node.type.page
+    - views.view.group_menu_view
   module:
+    - ctools_block
     - ds
+    - layout_builder
+    - layout_builder_restrictions
+    - layout_discovery
+    - layout_library
     - panelizer
     - text
     - user
+    - views
 third_party_settings:
   panelizer:
     enable: false
     custom: false
     allow: false
     default: default
-  ds:
-    layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
-      disable_css: false
-      entity_classes: all_classes
-      settings: {  }
-    regions:
-      content:
-        - field_featured_media
-        - field_summary
-        - field_body_content
+  layout_builder:
+    allow_custom: false
+    enabled: true
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          9f786d62-8310-44ae-94d3-d699ac92bb2d:
+            uuid: 9f786d62-8310-44ae-94d3-d699ac92bb2d
+            region: content
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'field_block:node:page:field_featured_media'
+              formatter:
+                label: hidden
+                settings:
+                  view_mode: banner
+                  link: false
+                third_party_settings:
+                  ds:
+                    ft:
+                      id: expert
+                      settings:
+                        lb: ''
+                        prefix: ''
+                        lbw-el: ''
+                        lbw-cl: ''
+                        lbw-at: ''
+                        ow: true
+                        ow-el: ''
+                        ow-cl: mb-3
+                        ow-at: ''
+                        fis-el: ''
+                        fis-cl: ''
+                        fis-at: ''
+                        fi-el: ''
+                        fi-cl: ''
+                        fi-at: ''
+                        suffix: ''
+                        lbw: false
+                        lb-col: false
+                        ow-def-at: false
+                        ow-def-cl: false
+                        fis: false
+                        fis-def-at: false
+                        fi: false
+                        fi-def-at: false
+                type: entity_reference_entity_view
+            additional: {  }
+            weight: 0
+        third_party_settings: {  }
+      -
+        layout_id: layout_twocol_section
+        layout_settings:
+          column_widths: 75-25
+        components:
+          95d9aeda-b8a9-4c09-9c56-c4725c8b2c8a:
+            uuid: 95d9aeda-b8a9-4c09-9c56-c4725c8b2c8a
+            region: first
+            configuration:
+              id: 'field_block:node:page:field_summary'
+              label: Summary
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: string
+                settings:
+                  link_to_entity: false
+                third_party_settings:
+                  ds:
+                    ft:
+                      id: default
+                      settings:
+                        lb: ''
+                        lb-col: false
+                        classes: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          c2d5bb9e-43e2-46bb-a175-a55ac4508507:
+            uuid: c2d5bb9e-43e2-46bb-a175-a55ac4508507
+            region: first
+            configuration:
+              id: 'entity_field:node:field_body_content'
+              label: 'Body content'
+              provider: ctools_block
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: text_default
+                settings: {  }
+                third_party_settings: {  }
+                weight: 0
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 1
+          30e8ca6f-2ae8-46b9-8c5a-f86577718c4b:
+            uuid: 30e8ca6f-2ae8-46b9-8c5a-f86577718c4b
+            region: second
+            configuration:
+              id: 'views_block:group_menu_view-block_1'
+              label: ''
+              provider: views
+              label_display: '0'
+              views_label: ''
+              items_per_page: none
+              context_mapping: {  }
+            additional: {  }
+            weight: 0
+        third_party_settings: {  }
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components: {  }
+        third_party_settings: {  }
+  layout_library:
+    enable: true
+  layout_builder_restrictions:
+    allowed_blocks: {  }
+    allowed_layouts: {  }
 id: node.page.default
 targetEntityType: node
 bundle: page
@@ -136,4 +258,5 @@ hidden:
   field_search_keywords: true
   field_topics: true
   group_content: true
+  layout_selection: true
   links: true
