--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -81,7 +81,10 @@ module:
   inline_entity_form: 0
   inline_form_errors: 0
   key: 0
+  layout_builder: 0
+  layout_builder_restrictions: 0
   layout_discovery: 0
+  layout_library: 0
   lightning_contact_form: 0
   lightning_core: 0
   lightning_landing_page: 0
