--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -49,3 +49,14 @@ cloudy_main_with_sidebar:
       label: Primary
     secondary:
       label: Secondary
+
+# Main with sidebar is used for content that needs a sidebar layout
+cloudy_main_with_menu:
+  label: Cloudy main with menu
+  category: Cloudy
+  template: templates/layout/cloudy-main-with-menu
+  regions:
+    primary:
+      label: Primary
+    secondary:
+      label: Secondary
