--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -90,7 +90,10 @@ inline_form_errors: 0.0.0
 jsonapi: 0.0.0
 key: 1.8.0
 kint: 1.2.0
+layout_builder: 8.7.6
+layout_builder_restrictions: 1.5.0
 layout_discovery: 0.0.0
+layout_library: 1.0.0-alpha2
 lightning: 3.2.0
 lightning_api: 0.0.0
 lightning_contact_form: 0.0.0
@@ -149,6 +152,7 @@ paragraphs: 0.0.0
 path: 0.0.0
 pathauto: 0.0.0
 portland: 0.0.0
+portland_edit_forms: 0.1.0
 portland_legacy_redirects: 0.1.0
 portland_media_embed_helper: 0.1.0
 portland_migrations: 0.0.0
@@ -210,4 +214,3 @@ webform: 5.0.0-rc22
 webform_ui: 5.0.0-rc22
 workflows: 0.0.0
 yearonly: 1.3.0
-portland_edit_forms: 0.1.0
