POWR-1284 manually migrated code and configs from POWR-1102 and continuing work.

--- a/web/sites/default/config/taxonomy.vocabulary.policy_category.yml
+++ b/web/sites/default/config/taxonomy.vocabulary.policy_category.yml
@@ -4,5 +4,5 @@ status: true
 dependencies: {  }
 name: 'Policy category'
 vid: policy_category
-description: ''
+description: 'The 2-level category hierarchy for city policies documents'
 weight: 0
