installed toc module and toc per node module

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "acquia/lightning": "^4.0",
         "bower-asset/bootstrap-datepicker": "^1.8",
         "bower-asset/cropper": "^2.3",
+        "bower-asset/toc": "^2.1",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
@@ -98,6 +99,7 @@
         "drupal/telephone_validation": "^2.1",
         "drupal/textarea_widget_for_text": "^1.1",
         "drupal/time_field": "^1.1",
+        "drupal/toc_js": "^1.6",
         "drupal/transliterate_filenames": "^1.2",
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bulk_operations": "^2.2",
