POWR-1332 added code to migrate 3rd level policies as children of 2nd level in taxonomy and link them to content items.

--- a/web/modules/custom/portland_migrations/migrations/policies_categories.yml
+++ b/web/modules/custom/portland_migrations/migrations/policies_categories.yml
@@ -1,3 +1,6 @@
+# this migration is for 2nd level policies categories. the datafile has been updated
+# to only contain 2nd level categories. 3rd level categories are migrated using a
+# custom process plugin that's called by the main policies migration.
 id: policies_categories
 label: 'City Policy Categories 2nd Level Import'
 migration_group: policies
