--- a/web/modules/custom/portland_migrations/migrations/policies_types.yml
+++ b/web/modules/custom/portland_migrations/migrations/policies_types.yml
@@ -12,7 +12,7 @@ process:
     plugin: default_value
     default_value: policy_type
   name: TYPE_NAME
-  field_type_code: TYPE_CODE
+  field_policy_type_code: TYPE_CODE
   description: DESCRIPTION
 destination:
   plugin: 'entity:taxonomy_term'
