POWR-1332 updated policy number field type

--- a/web/sites/default/config/core.entity_view_display.node.policy.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.policy.default.yml
@@ -51,11 +51,19 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: content
+  field_policy_number:
+    weight: 2
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
 hidden:
   content_moderation_control: true
   field_legacy_path: true
   field_policy_category: true
-  field_policy_number: true
   field_policy_type: true
   field_reviewer: true
+  group_content: true
   links: true
