--- a/web/sites/default/config/core.entity_form_display.node.policy.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.policy.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.policy.field_policy_type
     - field.field.node.policy.field_reviewer
     - node.type.policy
+    - workflows.workflow.editorial
   module:
     - chosen_field
     - content_moderation
@@ -67,11 +68,12 @@ content:
     type: chosen_select
     region: content
   field_policy_number:
-    weight: 3
+    weight: 26
     settings:
+      size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: number
+    type: string_textfield
     region: content
   field_policy_type:
     weight: 1
@@ -126,6 +128,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  group_content: true
   promote: true
   status: true
   sticky: true
