POWR-1332 tweaks and fixes to migration, moved updated policy number field to top of form.

--- a/web/modules/custom/portland_migrations/migrations/policies.yml
+++ b/web/modules/custom/portland_migrations/migrations/policies.yml
@@ -22,7 +22,7 @@ process:
       source: TEXT
   field_body_content/format:
     plugin: default_value
-    default_value: simplified_editor_with_media_embed
+    default_value: full_html
   field_policy_number:
     plugin: migrate_policy_number
     source: POLICY_NUMBER
@@ -35,7 +35,7 @@ process:
   field_policy_type:
     plugin: link_policy_type
     source: POLICY_NUMBER
-  field_policy_catetory:
+  field_policy_category:
     plugin: migrate_policy_categories
     source:
       - CATEGORY_NAME
