--- a/web/modules/custom/portland_migrations/migrations/policies_types.yml
+++ b/web/modules/custom/portland_migrations/migrations/policies_types.yml
@@ -6,7 +6,7 @@ source:
   path: modules/custom/portland_migrations/sources/policies_types.csv
   header_row_count: 1
   keys:
-    - TYPE_CODE
+    - TYPE_NAME
 process:
   vid:
     plugin: default_value
