--- a/web/sites/default/config/core.entity_view_display.node.policy.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.policy.default.yml
@@ -28,15 +28,15 @@ bundle: policy
 mode: default
 content:
   field_body_content:
-    weight: 0
+    weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_documents:
-    weight: 1
-    label: hidden
+    weight: 2
+    label: above
     settings:
       view_mode: embedded
       link: false
@@ -52,7 +52,7 @@ content:
     type: entity_reference_entity_view
     region: content
   field_policy_number:
-    weight: 2
+    weight: 0
     label: above
     settings:
       link_to_entity: false
