Configuring Toc.js and adding libraries to composer.json

--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -37,6 +37,7 @@ third_party_settings:
     regions:
       content:
         - field_featured_media
+        - toc_js
         - field_summary
         - field_body_content
 id: node.page.default
@@ -45,7 +46,7 @@ bundle: page
 mode: default
 content:
   field_body_content:
-    weight: 2
+    weight: 3
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -90,7 +91,7 @@ content:
     region: content
   field_summary:
     type: string
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings:
@@ -124,6 +125,11 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
+  toc_js:
+    weight: 1
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   field_audience: true
