--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,24 @@
         "dev": {
             "type": "vcs",
             "url": "https://github.com/acquia/lightning-dev"
-        }
+        },
+        "2": {
+             "type": "package",
+             "package": {
+                 "name": "toc/toc",
+                 "version": "v0.3.2",
+                 "type": "drupal-library",
+                 "dist": {
+                     "url": "https://raw.githubusercontent.com/jgallen23/toc/greenkeeper/update-all/dist/toc.min.js",
+                     "type": "file"
+                 }
+             }
+         }
     },
     "require": {
         "acquia/lightning": "^4.0",
         "bower-asset/bootstrap-datepicker": "^1.8",
         "bower-asset/cropper": "^2.3",
-        "bower-asset/toc": "^2.1",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
@@ -100,6 +111,7 @@
         "drupal/textarea_widget_for_text": "^1.1",
         "drupal/time_field": "^1.1",
         "drupal/toc_js": "^1.6",
+        "drupal/toc_js_per_node": "^1.6",
         "drupal/transliterate_filenames": "^1.2",
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bulk_operations": "^2.2",
@@ -109,6 +121,7 @@
         "drupal/webform": "^5.1",
         "drush/drush": "^9.5.0",
         "hirak/prestissimo": "^0.3.9",
+        "toc/toc": "*",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "^1.4"
