--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -193,6 +193,8 @@ telephone_validation: 2.1.0
 text: 0.0.0
 textarea_widget_for_text: 1.1.0
 time_field: 1.1.0
+toc_js: 1.6.0
+toc_js_per_node: 1.6.0
 token: 0.0.0
 toolbar: 0.0.0
 transliterate_filenames: 1.2.0
