POWR-1174 adding environment indicator color bar

--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,7 @@
         "drupal/draggableviews": "^1.2",
         "drupal/ds": "^3.1",
         "drupal/easy_breadcrumb": "^1.12",
+        "drupal/environment_indicator": "^3.6",
         "drupal/eva": "^2.0",
         "drupal/extlink": "^1.1",
         "drupal/facets": "^1.0",
