--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -19,6 +19,7 @@ module:
   ckeditor: 0
   ckeditor_config: 0
   cleave: 0
+  color: 0
   components: 0
   conditional_fields: 0
   config: 0
@@ -52,6 +53,7 @@ module:
   entity_embed: 0
   entity_reference: 0
   entity_reference_revisions: 0
+  environment_indicator: 0
   eva: 0
   facets: 0
   field: 0
