--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -21,6 +21,7 @@ ckeditor: 0.0.0
 ckeditor_config: 2.0.0
 clamav: 1.0.0
 cleave: 0.1.0
+color: 8.7.6
 comment: 8.5.6
 components: 0.0.0
 conditional_fields: 1.0.0-alpha4
@@ -56,6 +57,7 @@ entity_browser_entity_form: 0.0.0
 entity_embed: 0.0.0
 entity_reference: 0.0.0
 entity_reference_revisions: 0.0.0
+environment_indicator: 3.6.0
 eva: 1.3.0
 extlink: 1.1.0
 facets: 0.0.0
