--- a/web/modules/custom/portland_migrations/migrations/policies.yml
+++ b/web/modules/custom/portland_migrations/migrations/policies.yml
@@ -18,11 +18,14 @@ process:
     default_value: 1
   title: CONTENT_NAME
   field_body_content/value:
-      plugin: migrate_body_content_and_linked_media
-      source: TEXT
+    plugin: migrate_body_content_and_linked_media
+    source: TEXT
   field_body_content/format:
     plugin: default_value
     default_value: full_html
+  field_documents:
+    plugin: migrate_documents
+    source: TEXT
   field_policy_number:
     plugin: migrate_policy_number
     source: POLICY_NUMBER
