POWR-1284 updated the description of the Policy Categories vocabulary.

--- a/web/sites/default/config/taxonomy.vocabulary.policy_category.yml
+++ b/web/sites/default/config/taxonomy.vocabulary.policy_category.yml
@@ -4,5 +4,5 @@ status: true
 dependencies: {  }
 name: 'Policy category'
 vid: policy_category
-description: 'The 2-level category hierarchy for city policies documents'
+description: 'Category hierarchy for city policy content'
 weight: 0
