--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -27,6 +27,8 @@ permissions:
   - 'access shortcuts'
   - 'access user profiles'
   - 'access video_browser entity browser pages'
+  - 'administer toc_js'
+  - 'administer toc_js per node'
   - 'break content lock'
   - 'create location content'
   - 'create media'
