POWR-1221 move votes to the agenda item

--- a/web/sites/default/config/core.entity_view_display.paragraph.council_agenda_item.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.council_agenda_item.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.council_agenda_item.field_agenda_item_number
+    - field.field.paragraph.council_agenda_item.field_commissioners_vote
     - field.field.paragraph.council_agenda_item.field_council_document
     - field.field.paragraph.council_agenda_item.field_notes
     - field.field.paragraph.council_agenda_item.field_time
@@ -11,6 +12,7 @@ dependencies:
     - paragraphs.paragraphs_type.council_agenda_item
   module:
     - ds
+    - entity_reference_revisions
     - text
     - time_field
 id: paragraph.council_agenda_item.default
@@ -26,6 +28,15 @@ content:
       prefix_suffix: true
     third_party_settings: {  }
     type: number_integer
+    region: content
+  field_commissioners_vote:
+    type: entity_reference_revisions_entity_view
+    weight: 6
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
     region: content
   field_council_document:
     weight: 3
