--- a/web/sites/default/config/field.field.paragraph.council_agenda_item.field_commissioners_vote.yml
+++ b/web/sites/default/config/field.field.paragraph.council_agenda_item.field_commissioners_vote.yml
@@ -1,22 +1,22 @@
-uuid: 0664168d-69af-4ced-b59a-8af6daa2892d
+uuid: f48dd0d0-d083-4e09-bc74-7738a765cdb2
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_commissioner_votes
-    - node.type.council_document
+    - field.storage.paragraph.field_commissioners_vote
+    - paragraphs.paragraphs_type.council_agenda_item
     - paragraphs.paragraphs_type.votes
   module:
     - custom_add_another
     - entity_reference_revisions
 third_party_settings:
   custom_add_another:
-    custom_add_another: 'Add another vote'
-    custom_remove: Remove
-id: node.council_document.field_commissioner_votes
-field_name: field_commissioner_votes
-entity_type: node
-bundle: council_document
+    custom_add_another: ''
+    custom_remove: ''
+id: paragraph.council_agenda_item.field_commissioners_vote
+field_name: field_commissioners_vote
+entity_type: paragraph
+bundle: council_agenda_item
 label: 'Commissioners voted as follows'
 description: ''
 required: false
@@ -31,72 +31,78 @@ settings:
       votes: votes
     target_bundles_drag_drop:
       address:
-        weight: 24
-        enabled: false
-      audio:
-        weight: 25
-        enabled: false
-      building:
         weight: 26
         enabled: false
-      card:
+      audio:
         weight: 27
         enabled: false
-      card_deck:
+      building:
         weight: 28
         enabled: false
-      columns_equal:
+      card:
         weight: 29
         enabled: false
-      council_agenda_item:
+      card_deck:
         weight: 30
         enabled: false
-      document:
+      columns_equal:
         weight: 31
         enabled: false
-      email_button:
+      council_agenda_item:
         weight: 32
         enabled: false
-      fax_button:
+      council_agenda_section:
         weight: 33
         enabled: false
-      form_app_button:
+      council_communication_item:
         weight: 34
         enabled: false
-      group_contact_information:
+      document:
         weight: 35
         enabled: false
-      image:
+      email_button:
         weight: 36
         enabled: false
-      location:
+      fax_button:
         weight: 37
         enabled: false
-      quote:
+      form_app_button:
         weight: 38
         enabled: false
-      service_location:
+      group_contact_information:
         weight: 39
         enabled: false
-      service_mode:
+      image:
         weight: 40
         enabled: false
-      service_step:
+      location:
         weight: 41
         enabled: false
-      simple_text:
+      quote:
         weight: 42
         enabled: false
-      telephone_button:
+      service_location:
         weight: 43
         enabled: false
-      video:
+      service_mode:
         weight: 44
+        enabled: false
+      service_step:
+        weight: 45
+        enabled: false
+      simple_text:
+        weight: 46
+        enabled: false
+      telephone_button:
+        weight: 47
+        enabled: false
+      video:
+        weight: 48
         enabled: false
       votes:
         enabled: true
-        weight: 45
+        weight: 49
       webform:
-        weight: 46
+        weight: 50
         enabled: false
 field_type: entity_reference_revisions
