--- a/web/sites/default/config/field.storage.paragraph.field_commissioners_vote.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_commissioners_vote.yml
@@ -1,18 +1,17 @@
-uuid: a9cd4d6f-9248-4266-bf4f-d2f823ffd248
+uuid: 50120383-5e3d-4f23-9a4f-24059a8e5efd
 langcode: en
 status: true
 dependencies:
   module:
     - entity_reference_revisions
     - field_permissions
-    - node
     - paragraphs
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_commissioner_votes
-field_name: field_commissioner_votes
-entity_type: node
+id: paragraph.field_commissioners_vote
+field_name: field_commissioners_vote
+entity_type: paragraph
 type: entity_reference_revisions
 settings:
   target_type: paragraph
