--- a/web/sites/default/config/core.entity_form_display.node.council_document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.council_document.default.yml
@@ -5,19 +5,18 @@ dependencies:
   config:
     - field.field.node.council_document.field_body_content
     - field.field.node.council_document.field_bureau
-    - field.field.node.council_document.field_commissioner_votes
     - field.field.node.council_document.field_council_document_status
     - field.field.node.council_document.field_council_document_type
     - field.field.node.council_document.field_documents_and_exhibits
     - field.field.node.council_document.field_efiles_link
     - field.field.node.council_document.field_introduced_by
     - node.type.council_document
+    - workflows.workflow.editorial
   module:
     - chosen_field
     - content_moderation
     - file
     - link
-    - paragraphs
     - path
     - text
 id: node.council_document.default
@@ -44,25 +43,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
-    region: content
-  field_commissioner_votes:
-    type: paragraphs
-    weight: 8
-    settings:
-      title: Vote
-      title_plural: Votes
-      edit_mode: open
-      closed_mode: preview
-      autocollapse: none
-      closed_mode_threshold: 0
-      add_mode: button
-      form_display_mode: default
-      default_paragraph_type: votes
-      features:
-        duplicate: duplicate
-        collapse_edit_all: collapse_edit_all
-        add_above: add_above
-    third_party_settings: {  }
     region: content
   field_council_document_status:
     weight: 1
@@ -139,5 +119,6 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  group_content: true
   promote: true
   sticky: true
