--- a/web/sites/default/config/core.entity_form_display.paragraph.council_agenda_item.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.council_agenda_item.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.council_agenda_item.field_agenda_item_number
+    - field.field.paragraph.council_agenda_item.field_commissioners_vote
     - field.field.paragraph.council_agenda_item.field_council_document
     - field.field.paragraph.council_agenda_item.field_notes
     - field.field.paragraph.council_agenda_item.field_time
@@ -11,6 +12,7 @@ dependencies:
     - paragraphs.paragraphs_type.council_agenda_item
   module:
     - chosen_field
+    - paragraphs
     - text
     - time_field
 id: paragraph.council_agenda_item.default
@@ -24,6 +26,25 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: number
+    region: content
+  field_commissioners_vote:
+    type: paragraphs
+    weight: 6
+    settings:
+      title: Vote
+      title_plural: Votes
+      edit_mode: closed_expand_nested
+      closed_mode: preview
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: button
+      form_display_mode: default
+      default_paragraph_type: votes
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: add_above
+    third_party_settings: {  }
     region: content
   field_council_document:
     weight: 4
