--- a/web/sites/default/config/core.entity_view_display.node.council_document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_document.default.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.field.node.council_document.field_body_content
     - field.field.node.council_document.field_bureau
-    - field.field.node.council_document.field_commissioner_votes
     - field.field.node.council_document.field_council_document_status
     - field.field.node.council_document.field_council_document_type
     - field.field.node.council_document.field_documents_and_exhibits
@@ -13,7 +12,6 @@ dependencies:
     - field.field.node.council_document.field_introduced_by
     - node.type.council_document
   module:
-    - entity_reference_revisions
     - file
     - link
     - panelizer
@@ -49,15 +47,6 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
-    region: content
-  field_commissioner_votes:
-    type: entity_reference_revisions_entity_view
-    weight: 7
-    label: above
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
     region: content
   field_council_document_status:
     weight: 0
@@ -118,4 +107,5 @@ content:
     type: entity_reference_label
     region: content
 hidden:
+  group_content: true
   links: true
