POWR-1374 Set the Groups field to select for Video

--- a/web/sites/default/config/core.entity_form_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.video.default.yml
@@ -92,7 +92,7 @@ content:
     weight: 9
     region: content
     settings:
-      widget: autocomplete
+      widget: select
       required: '1'
       multiple: 0
     third_party_settings: {  }
