POWR-1364 implemented honeypot

--- a/composer.json
+++ b/composer.json
@@ -80,6 +80,7 @@
         "drupal/google_analytics": "^2.3",
         "drupal/group": "1.0.0-rc4",
         "drupal/groupmedia": "^2.0",
+        "drupal/honeypot": "^1.29",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "^1.8",
         "drupal/lightning_layout": "~2.0.0",
