--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -81,6 +81,7 @@ groupmedia: 2.0.0-alpha2
 hal: 8.6.4
 help: 0.0.0
 history: 0.0.0
+honeypot: 1.29.0
 hsts: 1.0.0
 htmlpurifier: 1.0.0-rc1
 image: 0.0.0
