--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -3,7 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.group.project.field_address
     - field.field.group.project.field_audience
+    - field.field.group.project.field_email
     - field.field.group.project.field_enable_documents_menu_item
     - field.field.group.project.field_enable_events_menu_item
     - field.field.group.project.field_enable_guides_and_informat
@@ -15,6 +17,7 @@ dependencies:
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
+    - field.field.group.project.field_phone
     - field.field.group.project.field_project_status
     - field.field.group.project.field_project_type
     - field.field.group.project.field_search_keywords
@@ -24,6 +27,7 @@ dependencies:
     - field.field.group.project.field_topics
     - group.type.project
   module:
+    - address
     - datetime
     - ds
     - field_group
@@ -69,6 +73,20 @@ targetEntityType: group
 bundle: project
 mode: default
 content:
+  field_address:
+    weight: 21
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: address_default
+    region: content
+  field_email:
+    weight: 23
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
+    region: content
   field_end_date:
     type: datetime_default
     weight: 20
@@ -176,6 +194,13 @@ content:
             fi: false
             fi-def-at: false
     type: entity_reference_entity_view
+    region: content
+  field_phone:
+    weight: 22
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
     region: content
   field_start_date:
     weight: 19
