POWR-1157 Add social networks, city section, neighborhood fields.

--- a/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
@@ -5,12 +5,16 @@ dependencies:
   config:
     - field.field.node.park_facility.field_alert_text
     - field.field.node.park_facility.field_body_content
+    - field.field.node.park_facility.field_city_secsion
+    - field.field.node.park_facility.field_facebook
     - field.field.node.park_facility.field_history
     - field.field.node.park_facility.field_hours_of_operation
     - field.field.node.park_facility.field_images
+    - field.field.node.park_facility.field_instagram
     - field.field.node.park_facility.field_legacy_path
     - field.field.node.park_facility.field_located_within
     - field.field.node.park_facility.field_location_status
+    - field.field.node.park_facility.field_neighborhood
     - field.field.node.park_facility.field_park_address_or_entrance
     - field.field.node.park_facility.field_park_amenities_activities
     - field.field.node.park_facility.field_park_location_type
@@ -19,6 +23,7 @@ dependencies:
     - field.field.node.park_facility.field_reviewer
     - field.field.node.park_facility.field_search_keywords
     - field.field.node.park_facility.field_size_in_acres
+    - field.field.node.park_facility.field_twitter
     - field.field.node.park_facility.field_year_acquired
     - node.type.park_facility
   module:
@@ -44,21 +49,37 @@ content:
     type: text_default
     region: content
   field_body_content:
-    weight: 9
+    weight: 11
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
+  field_city_secsion:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_facebook:
+    weight: 14
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_history:
-    weight: 10
+    weight: 12
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_hours_of_operation:
-    weight: 5
+    weight: 7
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -66,15 +87,23 @@ content:
     region: content
   field_images:
     type: entity_reference_entity_view
-    weight: 11
+    weight: 13
     label: hidden
     settings:
       view_mode: default
       link: false
     third_party_settings: {  }
     region: content
+  field_instagram:
+    weight: 16
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_located_within:
-    weight: 4
+    weight: 6
     label: above
     settings:
       link: true
@@ -96,8 +125,16 @@ content:
             classes: {  }
     type: entity_reference_label
     region: content
+  field_neighborhood:
+    weight: 4
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_park_address_or_entrance:
-    weight: 3
+    weight: 5
     label: hidden
     settings:
       link: false
@@ -113,7 +150,7 @@ content:
     type: entity_reference_label
     region: content
   field_park_amenities_activities:
-    weight: 8
+    weight: 10
     label: hidden
     settings:
       link: true
@@ -128,17 +165,8 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_property_id:
-    weight: 12
-    label: above
-    settings:
-      thousand_separator: ''
-      prefix_suffix: true
-    third_party_settings: {  }
-    type: number_integer
-    region: content
   field_size_in_acres:
-    weight: 6
+    weight: 8
     label: hidden
     settings:
       thousand_separator: ''
@@ -148,8 +176,16 @@ content:
     third_party_settings: {  }
     type: number_decimal
     region: content
+  field_twitter:
+    weight: 15
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_year_acquired:
-    weight: 7
+    weight: 9
     label: hidden
     settings:
       thousand_separator: ''
@@ -161,6 +197,8 @@ hidden:
   content_moderation_control: true
   field_legacy_path: true
   field_portlandmaps_id: true
+  field_property_id: true
   field_reviewer: true
   field_search_keywords: true
+  group_content: true
   links: true
