--- a/web/sites/default/config/core.entity_form_display.group_content.bureau_office-group_node-event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group_content.bureau_office-group_node-event.default.yml
@@ -3,7 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.group_content.bureau_office-group_node-event.field_feature_this_content
+    - field.field.group_content.bureau_office-group_node-event.field_feature_until
     - group.content_type.bureau_office-group_node-event
+  module:
+    - datetime
 id: group_content.bureau_office-group_node-event.default
 targetEntityType: group_content
 bundle: bureau_office-group_node-event
@@ -18,6 +22,19 @@ content:
       placeholder: ''
     region: content
     third_party_settings: {  }
+  field_feature_this_content:
+    weight: 3
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_feature_until:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
 hidden:
   path: true
   uid: true
