--- a/web/sites/default/config/core.entity_view_display.group_content.elected_official-group_node-news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group_content.elected_official-group_node-news.default.yml
@@ -1,4 +1,4 @@
-uuid: 8467b0c9-f3ef-4835-aebc-0fa848a11fd4
+uuid: 2aea5067-3e15-4e9e-88f8-8480c59852f5
 langcode: en
 status: true
 dependencies:
@@ -13,28 +13,25 @@ targetEntityType: group_content
 bundle: elected_official-group_node-news
 mode: default
 content:
-  entity_id:
-    type: entity_reference_autocomplete
-    weight: 0
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    region: content
-    third_party_settings: {  }
   field_feature_this_content:
-    weight: 3
+    weight: -4
+    label: above
     settings:
-      display_label: true
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
-    type: boolean_checkbox
+    type: boolean
     region: content
   field_feature_until:
-    weight: 4
-    settings: {  }
+    weight: -3
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
     region: content
 hidden:
-  path: true
+  entity_id: true
   uid: true
