--- a/web/sites/default/config/core.entity_view_display.group_content.group_content_type_f8c21c1e82c21.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group_content.group_content_type_f8c21c1e82c21.default.yml
@@ -1,4 +1,4 @@
-uuid: 5b21c14c-fab0-48d9-a875-80ed6e2d29b4
+uuid: 07ded071-b476-4422-81a9-d56307151d82
 langcode: en
 status: true
 dependencies:
@@ -13,28 +13,25 @@ targetEntityType: group_content
 bundle: group_content_type_f8c21c1e82c21
 mode: default
 content:
-  entity_id:
-    type: entity_reference_autocomplete
-    weight: 0
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    region: content
-    third_party_settings: {  }
   field_feature_this_content:
-    weight: 3
+    weight: -4
+    label: above
     settings:
-      display_label: true
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
-    type: boolean_checkbox
+    type: boolean
     region: content
   field_feature_until:
-    weight: 4
-    settings: {  }
+    weight: -3
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
     region: content
 hidden:
-  path: true
+  entity_id: true
   uid: true
