POWR-1183 removed Feature and Feature until fields from News content type; now on content relationship entity

--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -416,54 +416,11 @@ display:
           expose:
             operator: ''
           group: 1
-        field_feature_until_value:
-          id: field_feature_until_value
-          table: node__field_feature_until
-          field: field_feature_until_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '>='
-          value:
-            min: ''
-            max: ''
-            value: now
-            type: date
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: datetime
-        field_feature_this_content_value:
-          id: field_feature_this_content_value
-          table: node__field_feature_this_content
+        field_feature_this_content_value_1:
+          id: field_feature_this_content_value_1
+          table: group_content__field_feature_this_content
           field: field_feature_this_content_value
-          relationship: none
+          relationship: group_content
           group_type: group
           admin_label: ''
           operator: '='
@@ -495,6 +452,49 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: boolean
+        field_feature_until_value_1:
+          id: field_feature_until_value_1
+          table: group_content__field_feature_until
+          field: field_feature_until_value
+          relationship: group_content
+          group_type: group
+          admin_label: ''
+          operator: '>='
+          value:
+            min: ''
+            max: ''
+            value: now
+            type: offset
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
       defaults:
         filters: false
         filter_groups: false
@@ -610,11 +610,11 @@ display:
           plugin_id: boolean
           entity_type: node
           entity_field: status
-        field_feature_this_content_value:
-          id: field_feature_this_content_value
-          table: node__field_feature_this_content
+        field_feature_this_content_value_1:
+          id: field_feature_this_content_value_1
+          table: group_content__field_feature_this_content
           field: field_feature_this_content_value
-          relationship: none
+          relationship: group_content
           group_type: group
           admin_label: ''
           operator: '='
@@ -646,11 +646,11 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: boolean
-        field_feature_until_value:
-          id: field_feature_until_value
-          table: node__field_feature_until
+        field_feature_until_value_1:
+          id: field_feature_until_value_1
+          table: group_content__field_feature_until
           field: field_feature_until_value
-          relationship: none
+          relationship: group_content
           group_type: group
           admin_label: ''
           operator: '>='
@@ -1064,11 +1064,11 @@ display:
           plugin_id: boolean
           entity_type: node
           entity_field: status
-        field_feature_until_value_1:
-          id: field_feature_until_value_1
-          table: node__field_feature_until
+        field_feature_until_value_2:
+          id: field_feature_until_value_2
+          table: group_content__field_feature_until
           field: field_feature_until_value
-          relationship: none
+          relationship: group_content
           group_type: group
           admin_label: ''
           operator: empty
@@ -1107,11 +1107,11 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: datetime
-        field_feature_until_value:
-          id: field_feature_until_value
-          table: node__field_feature_until
+        field_feature_until_value_3:
+          id: field_feature_until_value_3
+          table: group_content__field_feature_until
           field: field_feature_until_value
-          relationship: none
+          relationship: group_content
           group_type: group
           admin_label: ''
           operator: '<='
@@ -1150,11 +1150,11 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: datetime
-        field_feature_this_content_value:
-          id: field_feature_this_content_value
-          table: node__field_feature_this_content
+        field_feature_this_content_value_1:
+          id: field_feature_this_content_value_1
+          table: group_content__field_feature_this_content
           field: field_feature_this_content_value
-          relationship: none
+          relationship: group_content
           group_type: group
           admin_label: ''
           operator: '!='
