POWR-1138 removed Featured fields from group events, updated group content view to include relationships operations links for admins

--- a/web/sites/default/config/core.entity_view_display.group_content.group_content_type_f8c21c1e82c21.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group_content.group_content_type_f8c21c1e82c21.default.yml
@@ -3,35 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.group_content.group_content_type_f8c21c1e82c21.field_feature_this_content
-    - field.field.group_content.group_content_type_f8c21c1e82c21.field_feature_until
     - group.content_type.group_content_type_f8c21c1e82c21
-  module:
-    - datetime
 id: group_content.group_content_type_f8c21c1e82c21.default
 targetEntityType: group_content
 bundle: group_content_type_f8c21c1e82c21
 mode: default
-content:
-  field_feature_this_content:
-    weight: -4
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_feature_until:
-    weight: -3
-    label: above
-    settings:
-      format_type: medium
-      timezone_override: ''
-    third_party_settings: {  }
-    type: datetime_default
-    region: content
+content: {  }
 hidden:
   entity_id: true
   uid: true
