--- a/web/sites/default/config/core.entity_form_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.document.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.media.document.field_document
     - field.field.media.document.field_document_type
+    - field.field.media.document.field_efiles_link
     - field.field.media.document.field_file_size
     - field.field.media.document.field_group
     - field.field.media.document.field_media_in_library
@@ -15,8 +16,27 @@ dependencies:
   module:
     - chosen_field
     - content_moderation
+    - field_group
     - file
     - gcontent_field
+    - link
+third_party_settings:
+  field_group:
+    group_document_storage:
+      children:
+        - field_efiles_link
+        - field_document
+      parent_name: ''
+      weight: 4
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        description: 'Choose one of the following options for linking to the document'
+        open: true
+        required_fields: true
+      label: 'Document storage'
+      region: content
 _core:
   default_config_hash: xFJUl0MccoGPEv1eb_I_XnxzjqvZ8M5HA1G3PBtv9IE
 id: media.document.default
@@ -25,7 +45,7 @@ bundle: document
 mode: default
 content:
   field_document:
-    weight: 3
+    weight: 9
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
@@ -36,6 +56,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
+    region: content
+  field_efiles_link:
+    weight: 8
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
     region: content
   field_summary:
     weight: 2
@@ -52,7 +80,7 @@ content:
     region: content
   group_content:
     type: group_selector_widget
-    weight: 4
+    weight: 5
     region: content
     settings:
       widget: select
@@ -61,7 +89,7 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -75,7 +103,7 @@ content:
     region: content
   status:
     type: boolean_checkbox
-    weight: 5
+    weight: 6
     region: content
     settings:
       display_label: true
