POWR-1060 Update media displays of file info

--- a/web/sites/default/config/core.entity_view_display.media.document.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.media.teaser
     - field.field.media.document.field_document
     - field.field.media.document.field_document_type
+    - field.field.media.document.field_efiles_link
     - field.field.media.document.field_file_size
     - field.field.media.document.field_group
     - field.field.media.document.field_media_in_library
@@ -14,7 +15,9 @@ dependencies:
     - media.type.document
   module:
     - ds
+    - field_group
     - file
+    - link
 third_party_settings:
   ds:
     layout:
@@ -27,8 +30,33 @@ third_party_settings:
       content:
         - name
         - field_document_type
-        - field_document
+        - field_efiles_link
+        - group_document_link
         - field_summary
+        - field_mime_type
+        - field_document
+        - field_file_size
+  field_group:
+    group_document_link:
+      children:
+        - field_mime_type
+        - field_document
+        - field_file_size
+      parent_name: ''
+      weight: 3
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: 'flex items-center'
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: 'Document link'
+      region: content
 _core:
   default_config_hash: 4tgcXj_iKv9Fw3xmONUfCHKqO7OeOa11qVesruN4k4k
 id: media.document.teaser
@@ -38,7 +66,7 @@ mode: teaser
 content:
   field_document:
     type: file_default
-    weight: 2
+    weight: 14
     region: content
     label: hidden
     settings:
@@ -80,9 +108,36 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
+  field_efiles_link:
+    type: link
+    weight: 2
+    region: content
+    label: visually_hidden
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+  field_file_size:
+    type: number_unformatted
+    weight: 15
+    region: content
+    label: visually_hidden
+    settings: {  }
+    third_party_settings: {  }
+  field_mime_type:
+    type: string
+    weight: 13
+    region: content
+    label: visually_hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   field_summary:
     type: string
-    weight: 3
+    weight: 4
     region: content
     label: hidden
     settings:
@@ -127,9 +182,8 @@ content:
 hidden:
   content_moderation_control: true
   created: true
-  field_file_size: true
   field_group: true
   field_media_in_library: true
-  field_mime_type: true
+  group_content: true
   thumbnail: true
   uid: true
